[gd_scene load_steps=20 format=3 uid="uid://cad8oxbpfuctf"]

[ext_resource type="Script" path="res://Scenes/GUI_UI/PlayerGUI/playerUIScript.gd" id="1_arrvw"]
[ext_resource type="Texture2D" uid="uid://bxkc0uoa216p6" path="res://Scenes/GUI_UI/PlayerGUI/mainAttackResource.png" id="1_hgshh"]
[ext_resource type="Texture2D" uid="uid://w33vgmfjwu0w" path="res://Scenes/GUI_UI/PlayerGUI/secondAttackResource.png" id="2_frhi6"]
[ext_resource type="Script" path="res://Scenes/GUI_UI/PlayerGUI/AtaquePrincipalScritp.gd" id="3_p25gx"]
[ext_resource type="Texture2D" uid="uid://dd81ogoya48ha" path="res://Scenes/GUI_UI/PlayerGUI/specialAttackButton.png" id="3_v0nl1"]

[sub_resource type="FontVariation" id="FontVariation_oxq5c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4tsg"]
bg_color = Color(0.164706, 0.470588, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dulj6"]
bg_color = Color(0.0235294, 0.729412, 0, 0.87451)

[sub_resource type="Animation" id="Animation_tt46a"]
resource_name = "shakeAnimation"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(22, 24), Vector2(10, 24), Vector2(18, 24), Vector2(17, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ra23y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(22, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yjayr"]
_data = {
"RESET": SubResource("Animation_ra23y"),
"shakeAnimation": SubResource("Animation_tt46a")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8d7t8"]
bg_color = Color(0, 0.137255, 0.301961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ivb1"]
bg_color = Color(0.223529, 0.203922, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_idake"]
bg_color = Color(0, 0.294118, 0.454902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xjq2"]
bg_color = Color(0.168627, 0.490196, 0.584314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_34er5"]
bg_color = Color(0, 0, 0, 0.329412)

[sub_resource type="Animation" id="Animation_pecqy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HudGUI/AtaquePrincipal:flip_v")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1gosq"]
resource_name = "press"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HudGUI/AtaquePrincipal:flip_v")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s051g"]
_data = {
"RESET": SubResource("Animation_pecqy"),
"press": SubResource("Animation_1gosq")
}

[node name="playerUI" type="Node2D" groups=["gui_Info"]]
script = ExtResource("1_arrvw")

[node name="HudUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="HP_Label" type="Label" parent="HudUI"]
layout_mode = 0
offset_left = 22.0
offset_top = 24.0
offset_right = 234.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_oxq5c")
text = "HP: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HP_Bar" type="ProgressBar" parent="HudUI/HP_Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -13.5
offset_right = 106.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_o4tsg")
theme_override_styles/fill = SubResource("StyleBoxFlat_dulj6")
max_value = 1000.0
show_percentage = false

[node name="shakeHpBar" type="AnimationPlayer" parent="HudUI/HP_Label"]
libraries = {
"": SubResource("AnimationLibrary_yjayr")
}

[node name="MP_Label" type="Label" parent="HudUI"]
layout_mode = 0
offset_left = 17.0
offset_top = 63.0
offset_right = 229.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 13
text = "MP: 120"
horizontal_alignment = 1
vertical_alignment = 2

[node name="PanelEnergiaFondo" type="Panel" parent="HudUI/MP_Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8d7t8")

[node name="PanelEnergiaFrente" type="Panel" parent="HudUI/MP_Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -21.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2ivb1")

[node name="LVL_Label" type="Label" parent="HudUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.0
offset_top = 24.0
offset_right = 21.0
offset_bottom = 47.0
grow_horizontal = 2
text = "LVL: 1"

[node name="BackGroundPanel" type="Panel" parent="HudUI/LVL_Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -12.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackGroundXP" type="Panel" parent="HudUI/LVL_Label"]
layout_mode = 0
offset_left = -272.5
offset_top = -6.0
offset_right = 315.5
offset_bottom = -2.0
theme_override_styles/panel = SubResource("StyleBoxFlat_idake")

[node name="TopPanelXP" type="Panel" parent="HudUI/LVL_Label/BackGroundXP"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -211.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3xjq2")

[node name="HudGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 432.0
offset_top = 595.0
offset_right = 688.0
offset_bottom = 646.0

[node name="BackGroundPanel" type="Panel" parent="HudGUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_34er5")

[node name="AtaquePrincipal" type="TextureButton" parent="HudGUI" groups=["hudButtonsDetectNormalAttack"]]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -26.0
offset_right = 521.0
offset_bottom = 486.0
grow_vertical = 2
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("1_hgshh")
script = ExtResource("3_p25gx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="HudGUI/AtaquePrincipal"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_s051g")
}

[node name="AtaqueSecundario" type="TextureButton" parent="HudGUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -25.0
offset_right = 486.0
offset_bottom = 487.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("2_frhi6")

[node name="AtaqueEspecial" type="TextureButton" parent="HudGUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -25.0
offset_right = 550.0
offset_bottom = 725.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.07, 0.07)
texture_normal = ExtResource("3_v0nl1")
